--- a/index.html
+++ b/index.html
@@ -32,89 +32,92 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header class="top">
-        <div> <img src="images/logo.svg" alt="logo" /></div>     
-       <nav class="nav-links">
-         <ul>
-           <li><a href="#">Features</a></li>
-           <li><a href="#">Team</a></li>
-           <li><a href="#">Sign In</a></li>
-         </ul>
-       </nav>
-     </header>
-     <!----------section 1--------->
-     <section class="stores">
-       <article>
-         <h1>All your files in one secure location, accessible anywhere.</h1>
-         <p>
-           Fylo stores your most important files in one secure location. Access
-           them wherever you need, share and collaborate with friends, family,
-           and co-workers.
-         </p>
-         <form>
-           <input type="email" placeholder="Enter your email..." />
-           <button class="button">Get Started</button>
-         </form>
-       </article>
-       <img src="images/illustration-1.svg" alt="" />
-     </section>
-     <!-----section 2------->
-     <section class="productive">
-       <article>
-         <h2>Stay productive, wherever you are</h2>
-         <p>
-           Never let location be an issue when accessing your files. Fylo has you
-           covered for all of your file storage needs.
-         </p>
-         <p>
-           Securely share files and folders with friends, family and colleagues
-           for live collaboration. No email attachments required!
-         </p>
-         <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt="" /></a>
-         <div class="card">
-           <img src="images/icon-quotes.svg" alt="" />
-           <p>
-             Fylo has improved our team productivity by<br> an order of magnitude.
-             Since making the<br> switch our team has become a well-oiled<br>
-             collaboration machine.
-           </p>
-           <div class="klye">
-             <div><img src="images/avatar-testimonial.jpg" alt="" /></div>
-             <div class="burton">
-               <h5>Kyle Burton</h5>
-               <p>Founder & CEO, Huddle</p>
-             </div>
-           </div>
-         </div>
-       </article>
-       <img src="images/illustration-2.svg" alt="" />
-     </section>
-     <!----------call to action--------->
-     <section class="cta">
-       <article>
-         <h1>Get early access today</h1>
-         <p>
-           It only takes a minute to sign up and our free starter tier is<br>
-           extremely generous. If you have any questions, our support team<br> would
-           be happy to help you.
-         </p>
-       </article>
-         <form>
-           <input type="email" placeholder="email@example.com" />
-           <button>Get Started For Free</button>
-         </form>
-       
-     </section>
-     <!----------footer--------->
-     <footer>
-       <section class="footer">
-         <img src="images/logo.svg" alt="logo" />       
-          <div class="bottom">
-            <div class="btm">
+    <header class="top">
+      <div><img src="images/logo.svg" alt="logo" /></div>
+      <nav class="nav-links">
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!----------section 1--------->
+    <section class="stores">
+      <article>
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family,
+          and co-workers.
+        </p>
+        <form>
+          <input type="email" placeholder="Enter your email..." />
+          <button class="button">Get Started</button>
+        </form>
+      </article>
+      <img src="images/illustration-1.svg" alt="" />
+    </section>
+    <!-----section 2------->
+    <section class="productive">
+      <article>
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required!
+        </p>
+        <a href="#"
+          >See how Fylo works <img src="images/icon-arrow.svg" alt=""
+        /></a>
+        <div class="card">
+          <img src="images/icon-quotes.svg" alt="" />
+          <p>
+            Fylo has improved our team productivity by<br />
+            an order of magnitude. Since making the<br />
+            switch our team has become a well-oiled<br />
+            collaboration machine.
+          </p>
+          <div class="klye">
+            <div><img src="images/avatar-testimonial.jpg" alt="" /></div>
+            <div class="burton">
+              <h5>Kyle Burton</h5>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+      </article>
+      <img src="images/illustration-2.svg" alt="" />
+    </section>
+    <!----------call to action--------->
+    <section class="cta">
+      <article>
+        <h1>Get early access today</h1>
+        <p>
+          It only takes a minute to sign up and our free starter tier is<br />
+          extremely generous. If you have any questions, our support team<br />
+          would be happy to help you.
+        </p>
+      </article>
+      <form>
+        <input type="email" placeholder="email@example.com" />
+        <button>Get Started For Free</button>
+      </form>
+    </section>
+    <!----------footer--------->
+    <footer>
+      <section class="footer">
+        <img src="images/logo.svg" alt="logo" />
+        <div class="bottom">
+          <div class="btm">
             <nav>
               <ul>
-                <li><i class="bi bi-telephone-fill"></i>Phone: +1-543-123-4567</li>
+                <li>
+                  <i class="bi bi-telephone-fill"></i>Phone: +1-543-123-4567
+                </li>
                 <li><i class="bi bi-envelope"></i>example@fylo.com</li>
               </ul>
             </nav>
@@ -134,14 +137,13 @@
               </ul>
             </nav>
           </div>
-            <div class="icons">
-              <i class="bi bi-facebook"></i>
-              <i class="bi bi-twitter"></i>
-              <i class="bi bi-instagram"></i>
-            </div>
-          </div> 
-       </section>
-     </footer>
-    </div>
+          <div class="icons">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-instagram"></i>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
